Fixed logos so you can change all four of them in advanced mode and they scale and align better in pdf

--- a/scheduler/scheduler.css
+++ b/scheduler/scheduler.css
@@ -1,3 +1,9 @@
+.thumbnail img {
+    /*width:200px;*/
+    height:200px;
+}
+
+
 /* Style the list */
 ul.tab {
     list-style-type: none;
